tdf#145604 indicate the row as the target when dropping in a visual tree

and indicate between rows when dropping in a visual list, which is what
we are doing for the gtk version.

a visual list case is tools, customize, menu and drag and drop the
assigned commands around.
a visual tree case is tools, macros, organize dialogs, use libraries
to create two libraries, and move to dialog and create a dialog in
one library, and drop it onto the other library to move it between
libraries.

Change-Id: Ia8dc944c1f411b1f072ad1c8dcc755a1e44e3b05
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126291
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit d6b003da6d77471e5e17a9cb6a25172d6f52da2a)